[package]
name = "redis-oxide"
version = "0.1.0"
authors = ["David Briggs <email@dpbriggs.ca>"]
edition = "2018"

[dependencies]
tokio = "0.1.19"
shlex = "0.1.1"
promptly = "0.1.5"
rand = "0.6.5"
tokio-codec = "0.1.1"
bytes = "0.4.12"
combine = "3.8.1"
partial-io = { version = "0.3.0", features = ["tokio", "quickcheck"] }
futures = "0.1.26"
# futures-locks = "0.3.3"
sloggers = "0.3.2"
lazy_static = "1.3.0"
slog = "2.4.1"
serde = "1.0.90"
serde_derive = "1.0.90"
bincode = "1.1.3"
structopt = "0.2.15"
directories = "1.0.2"
parking_lot = "0.7.1"
rmp-serde = "0.13.7"

[dev-dependencies]
pretty_assertions = "0.6.1"
proptest = "0.9.3"
