[package]
name = "redis-oxide"
version = "0.1.1"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"

[lib]
name = "redis_oxide"
path = "src/lib.rs"

[[bin]]
name = "redis-oxide"
path = "src/main.rs"

[dependencies]
tokio = "0.2.0-alpha.6"
shlex = "0.1.1"
promptly = "0.1.5"
rand = "0.6.5"
tokio-codec = "0.2.0-alpha.6"
bytes = "0.4.12"
combine = "3.8.1"
sloggers = "0.3.2"
lazy_static = "1.4.0"
slog = "2.4.1"
serde = { version = "1.0.90", features = ["rc"] }
serde_derive = "1.0.90"
bincode = "1.1.3"
structopt = "0.2.15"
directories = "1.0.2"
parking_lot = { version = "0.8.0", features = ["serde"] }
rmp-serde = "0.13.7"
spin = "0.5.2"
growable-bloom-filter = "0.2.0"
seahash = "3.0.6"

[dev-dependencies]
pretty_assertions = "0.6.1"
proptest = "0.9.3"
criterion = "0.3"

[[bench]]
name = "keys_benchmark"
harness = false
