[package]
name = "redis-oxide"
version = "0.2.0"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"

[lib]
name = "redis_oxide"
path = "src/lib.rs"

[[bin]]
name = "redis-oxide"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2.9", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
shlex = "0.1.1"
promptly = "0.1.5"
rand = "0.7.2"
bytes = { version = "0.5", features = ["serde"] }
sloggers = "0.3.4"
lazy_static = "1.4.0"
slog = "2.5.2"
serde = { version = "1.0.103", features = ["rc"] }
serde_derive = "1.0.103"
bincode = "1.2.0"
structopt = "0.3.5"
directories = "2.0.2"
parking_lot = { version = "0.9.0", features = ["serde"] }
rmp-serde = "0.14.0"
spin = "0.5.2"
growable-bloom-filter = "0.2.1"
seahash = "3.0.6"
futures = "0.3.1"
futures-util = "0.3.1"
serde_bytes = "0.11.3"
dashmap = { version = "3.2.1", features = ["serde"] }
memchr = "2.3.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
proptest = "0.9.4"
criterion = "0.3.0"

[[bench]]
name = "keys_benchmark"
harness = false

# [profile.release]
# debug = true